@@ -102,7 +102,7 @@ public class RotTrlTransform3d {
     }
 
     public List<Translation3d> applyTrls(List<Translation3d> trls) {
-        return trls.stream().map(this::apply).toList();
+        return trls.stream().map(this::apply).collect(Collectors.toList());
     }
 
     public Rotation3d apply(Rotation3d rot) {
@@ -110,7 +110,7 @@ public class RotTrlTransform3d {
     }
 
     public List<Rotation3d> applyRots(List<Rotation3d> rots) {
-        return rots.stream().map(this::apply).toList();
+        return rots.stream().map(this::apply).collect(Collectors.toList());
     }
 
     public Pose3d apply(Pose3d pose) {
@@ -118,6 +118,6 @@ public class RotTrlTransform3d {
     }
 
     public List<Pose3d> applyPoses(List<Pose3d> poses) {
-        return poses.stream().map(this::apply).toList();
+        return poses.stream().map(this::apply).collect(Collectors.toList());
     }
 }
