@@ -150,7 +150,7 @@ public class TargetModel {
      */
     public List<Translation3d> getFieldVertices(Pose3d targetPose) {
         var basisChange = new RotTrlTransform3d(targetPose.getRotation(), targetPose.getTranslation());
-        return vertices.stream().map(basisChange::apply).toList();
+        return vertices.stream().map(basisChange::apply).collect(Collectors.toList());
     }
 
     /**
