@@ -55,7 +55,7 @@ public class VisionEstimation {
                             return maybePose.map(pose3d -> new AprilTag(id, pose3d)).orElse(null);
                         })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
